00.homepage/02.real_time/kubernetes/04.homepage-nginx__Backend_Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: api-k8s-dashboard-backend-service
  namespace: k8s-dashboard
  labels:
    app: api-k8s-dashboard-backend
spec:
  selector:
    app: api-k8s-dashboard-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
