00.homepage/02.real_time/kubernetes/06.homepage-nginx__Frontend_Service.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: app-k8s-dashboard-frontend-service
  namespace: k8s-dashboard
  labels:
    app: app-k8s-dashboard-frontend
spec:
  selector:
    app: app-k8s-dashboard-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
